--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "expo": "^31.0.2",
+    "expo-core": "^1.2.0",
+    "expo-permissions": "^1.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-communications": "^2.2.1",
