--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "expo": "^31.0.2",
     "expo-core": "^1.2.0",
     "expo-permissions": "^1.0.2",
