--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "expo": "^31.0.2",
     "expo-core": "^1.2.0",
     "expo-permissions": "^1.0.2",
+    "moment": "^2.23.0",
+    "moment-timezone": "^0.5.23",
     "react": "16.5.0",
+    "react-moment": "^0.8.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-communications": "^2.2.1",
     "react-navigation": "^3.0.9"
